# humble-dl

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
humble_dl/: api.py  auth.py  cache.py  cli.py  downloader.py  exceptions.py  filters.py  models.py  utils.py
humblebundle_downloader/: api.py  cli.py  downloader.py  exceptions.py  models.py
tests/: test_api.py  test_auth.py  test_cache.py  test_cli.py  test_downloader.py  test_exceptions.py  test_filters.py  test_models.py  test_utils.py
