[project]
name = "humble-dl"
version = "0.5.1"
description = "Download your Humble Bundle library"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Felipe Tadeu", email = "souzalima@gmail.com"}]
requires-python = ">=3.10"
keywords = ["humble", "humble-bundle", "downloader", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
    "aiofiles>=24.1",
    "parsel>=1.9",
    "typer>=0.12",
    "rich>=13.7",
    "rookiepy>=0.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=1.0",
    "respx>=0.22",
    "pytest-cov>=5.0",
]
dev = [
    "ruff>=0.6",
]

[project.scripts]
hbd = "humble_dl.cli:app"

[project.urls]
Homepage = "https://github.com/timsleeper/humble-dl"
Repository = "https://github.com/timsleeper/humble-dl"
Issues = "https://github.com/timsleeper/humble-dl/issues"
Changelog = "https://github.com/timsleeper/humble-dl/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["humble_dl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
